--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,28 +4,76 @@ background-image: url(https://img.freepik.com/premium-photo/handmade-ceramic-tab
   height: 85vh;
 }
 .bg-img-login{
-   background-image: url(https://images.squarespace-cdn.com/content/v1/6442e77bd742137cdac58347/96a020d4-90ef-495f-bcb2-c7d77194c6b7/AdobeStock_332696922.jpeg);
+   /* background-image: url(https://wallpapers.com/images/hd/deep-blue-sea-bright-background-4ywoltna1j6fqpka.jpg); */
   background-size:cover ;
-  height: 80vh;
+  height: 100vh;
+background-image: linear-gradient(to right,rgb(24, 67, 122),lightblue,rgb(24, 67, 122));
 }
-.login-card{
-  width: 40%;
-  height: 60%;
-  background-color: transparent;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-margin-left: 100px;
-margin-top: 50px;
+.input-login{
+  
+  border: 1px solid black;
 }
+
 .input-login::placeholder{
-  color: white;
+
   font-family: cursive;
   font-size: 20px;
+
 }
 .text-categories{
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   color: #264653;
+}
+.bg-img-contact{
+  background-image: url("https://www.idfreshfood.com/wp-content/uploads/2017/09/contact_us_2.jpg");
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+
+}
+.contact-card-1{
+  height: 500px;
+  border: none;
+  margin-left: 160px;
+}
+.input-contact::placeholder{
+font-family: cursive;
+}
+.img-about-swiper {
+  display: block;
+  margin: auto;
+  width: 150px;
+  height: 100px;
+  border-radius: 10px;
+}
+.img-about-swiper:hover{
+  width: 170px;
+  height: 120px;
+  border-radius: 20px;
+
+}
+.about-swiper-1 {
+  margin-bottom: 50px;
+  border: none;
+  margin-top: 20px;
+}
+.about-text:hover {
+
+  font-size: 50px;
+  text-shadow:0px 0px 1px grey,0px 2px grey;
+}
+.about-text{
+  color:rgb(24, 67, 122);
+}
+.name {
+  color: rgb(24, 67, 122);
+  font-size: 25px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.name:hover {
+  font-size: 30px;
+  text-shadow: 0px 0px 5px lightblue, 0px 0px 10px lightblue, 0px 0px 15px rgb(24, 67, 122),
+    0px 0px 20px rgb(24, 67, 122), 0px 0px 25px rgb(24, 67, 122);
 }
